--- a/Dockerfile-ui
+++ b/Dockerfile-ui
@@ -2,15 +2,13 @@ FROM docker.io/node:22.9.0
 
 RUN apt-get update
 
-RUN npm install -g npm
-
 WORKDIR /usr/src/app
 RUN mkdir -p "/usr/src/app/mon-aide-cyber-ui/public"
 
 COPY package*.json /usr/src/app/
 COPY mon-aide-cyber-ui/package.json /usr/src/app/mon-aide-cyber-ui/package.json
 
-RUN npm install
+RUN npm ci
 
 COPY mon-aide-cyber-ui/ /usr/src/app/mon-aide-cyber-ui/
 
