--- a/mon-aide-cyber-api/test/docker-compose.yml
+++ b/mon-aide-cyber-api/test/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./docker-entrypoint-initdb.d/:/docker-entrypoint-initdb.d
 
   node:
-    image: docker.io/node:18.12.1 # Version LTS
+    image: docker.io/node:24
     environment:
       - URL_SERVEUR_BASE_DONNEES=postgres://postgres@mon-aide-cyber-bd-test
     volumes:
