Supprime un `npm ci` qui ne fonctionne pas
… car il n'a pas accès au `package-lock.json` se trouvant à la racine du projet sur l'hôte.

Le commit précédent avait modifié `migrations.sh`… ce commit-ci le supprime pour finalement exécuter les migrations sans indirections : c'est plus simple et évite le problème d'accès au `package-lock.json`.

--- a/mon-aide-cyber-api/test/docker-compose.yml
+++ b/mon-aide-cyber-api/test/docker-compose.yml
@@ -18,7 +18,8 @@ services:
       - URL_SERVEUR_BASE_DONNEES=postgres://postgres@mon-aide-cyber-bd-test
     volumes:
       - ../:/home/node/app
+      - ../../node_modules/:/home/node/app/node_modules
     working_dir: /home/node/app
-    command: './test/scripts/migrations.sh'
+    command: './node_modules/.bin/knex --knexfile ./src/infrastructure/entrepots/postgres/knexfile.ts migrate:latest'
     depends_on:
       - db
