--- a/.github/workflows/storybook-tests.yml
+++ b/.github/workflows/storybook-tests.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Installe les dépendances
         run: npm ci
       - name: Installe Playwright
-        run: npx playwright install chromium --with-deps
+        run: ./node_modules/.bin/playwright install chromium --with-deps
       - name: Construis Storybook
         run: npm run build:storybook --quiet -w mon-aide-cyber-ui
       - name: Démarre Storybook et execute les tests
         run: |
-          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
-            "npx http-server ./mon-aide-cyber-ui/storybook-static --port 6006 --silent" \
-            "npx wait-on tcp:6006 && npm run test:storybook -w mon-aide-cyber-ui"
+          ./node_modules/.bin/concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+            "./node_modules/.bin/http-server ./mon-aide-cyber-ui/storybook-static --port 6006 --silent" \
+            "./node_modules/.bin/wait-on tcp:6006 && npm run test:storybook -w mon-aide-cyber-ui"
