--- a/mon-aide-cyber-ui/package.json
+++ b/mon-aide-cyber-ui/package.json
@@ -38,15 +38,19 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
+    "concurrently": "^9.2.1",
     "eslint": "^8.43.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "eslint-plugin-storybook": "^9.0.4",
     "happy-dom": "^20.0.2",
+    "http-server": "^14.1.1",
+    "playwright": "^1.56.1",
     "prop-types": "^15.8.1",
     "sass": "^1.63.6",
-    "storybook": "^9.0.4"
+    "storybook": "^9.0.4",
+    "wait-on": "^9.0.3"
   },
   "eslintConfig": {
     "extends": [
