--- a/mon-aide-cyber-api/package.json
+++ b/mon-aide-cyber-api/package.json
@@ -35,45 +35,51 @@
     "test:watch": "vitest --config vitest.config.ts --ui --reporter verbose"
   },
   "dependencies": {
-    "@lab-anssi/lib": "^1.3.1",
-    "@sentry/node": "^7.76.0",
-    "@types/cookie-session": "^2.0.47",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/lusca": "^1.7.4",
-    "body-parser": ">=1.20.3",
-    "commander": "^11.1.0",
-    "cookie-session": "^2.0.0",
-    "date-fns": "^3.2.0",
-    "dotenv": "^16.3.1",
-    "exceljs": "^4.4.0",
-    "express": "^4.21.2",
-    "express-ipfilter": "^1.3.2",
-    "express-rate-limit": "^6.7.0",
-    "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "knex": "^2.5.1",
-    "lusca": "^1.7.0",
-    "openid-client": "^5.7.1",
-    "pdf-lib": "^1.17.1",
-    "pg": "^8.11.3",
-    "pug": "^3.0.3",
-    "puppeteer": "^24.10.0",
-    "ts-node": "^10.9.1",
-    "yaml": "^2.7.0",
-    "zod": "^3.25.76"
+    "@lab-anssi/lib": "~1.3.1",
+    "@sentry/node": "~7.77.0",
+    "@types/cookie-session": "~2.0.47",
+    "@types/express-serve-static-core": "~5.1.0",
+    "@types/jsonwebtoken": "~9.0.5",
+    "@types/lusca": "~1.7.4",
+    "body-parser": "~2.2.1",
+    "commander": "~11.1.0",
+    "cookies": "~0.9.0",
+    "cookie-session": "~2.0.0",
+    "date-fns": "~3.2.0",
+    "dotenv": "~16.3.1",
+    "exceljs": "~4.4.0",
+    "express": "~4.21.2",
+    "express-ipfilter": "~1.3.2",
+    "express-rate-limit": "~6.7.0",
+    "express-validator": "~7.0.1",
+    "jsonwebtoken": "~9.0.2",
+    "knex": "~2.5.1",
+    "lodash": "~4.17.20",
+    "lusca": "~1.7.0",
+    "openid-client": "~5.7.1",
+    "pdf-lib": "~1.17.1",
+    "pg": "~8.11.3",
+    "pug": "~3.0.3",
+    "puppeteer": "~24.33.1",
+    "qs": "6.14.1",
+    "ts-node": "~10.9.1",
+    "yaml": "~2.7.0",
+    "zod": "~3.25.76"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/lodash": "^4.14.199",
-    "@types/pg": "^8.10.5",
-    "@types/pug": "^2.0.6",
-    "@types/yaml": "^1.9.7",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^8.43.0",
-    "light-my-request": "^5.11.0",
-    "lodash.clonedeep": "^4.5.0",
-    "nodemon": "^2.0.22"
+    "@types/body-parser": "~1.19.6",
+    "@types/express": "~4.17.17",
+    "@types/lodash": "~4.14.199",
+    "@types/pg": "~8.10.5",
+    "@types/pug": "~2.0.6",
+    "@types/qs": "~6.14.0",
+    "@types/yaml": "~1.9.7",
+    "@typescript-eslint/eslint-plugin": "~8.51.0",
+    "@typescript-eslint/parser": "~8.51.0",
+    "@vitest/coverage-v8": "~3.2.4",
+    "eslint": "~9.39.0",
+    "light-my-request": "~5.11.0",
+    "lodash.clonedeep": "~4.5.0",
+    "nodemon": "~2.0.22"
   }
 }
