--- a/mon-aide-cyber-api/test/docker-compose.yml
+++ b/mon-aide-cyber-api/test/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   db:
     container_name: mon-aide-cyber-bd-test
-    image: docker.io/postgres
+    image: docker.io/postgres:14
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
     ports:
