--- a/mon-aide-cyber-ui/package.json
+++ b/mon-aide-cyber-ui/package.json
@@ -19,38 +19,39 @@
   },
   "dependencies": {
     "@babel/runtime": ">=7.26.10",
-    "@gouvfr/dsfr": "^1.11.0",
-    "@tanstack/react-query": "^5.59.15",
-    "@vitejs/plugin-react-swc": "^4.0.1",
-    "dompurify": "^3.2.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.10",
-    "react-router-dom": "^6.14.0"
+    "@gouvfr/dsfr": "~1.11.0",
+    "@tanstack/react-query": "~5.59.15",
+    "@tanstack/query-core": "~5.90.15",
+    "@vitejs/plugin-react": "~5.1.1",
+    "dompurify": "~3.2.6",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0",
+    "react-error-boundary": "~4.1.2",
+    "react-router-dom": "~6.14.0"
   },
   "devDependencies": {
-    "@storybook/addon-links": "^9.0.4",
-    "@storybook/react-vite": "^9.1.5",
-    "@storybook/test-runner": "^0.22.0",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.66",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "concurrently": "^9.2.1",
-    "eslint": "^8.43.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
-    "eslint-plugin-storybook": "^9.0.4",
-    "happy-dom": "^20.0.2",
-    "http-server": "^14.1.1",
-    "playwright": "^1.56.1",
-    "prop-types": "^15.8.1",
-    "sass": "^1.63.6",
-    "storybook": "^9.0.4",
-    "wait-on": "^9.0.3"
+    "@storybook/addon-links": "~9.0.4",
+    "@storybook/react-vite": "~9.1.5",
+    "@storybook/test-runner": "~0.22.0",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.13.5",
+    "@types/react": "~18.2.14",
+    "@types/react-dom": "~18.2.6",
+    "@typescript-eslint/eslint-plugin": "~8.51.0",
+    "@typescript-eslint/parser": "~8.51.0",
+    "concurrently": "~9.2.1",
+    "eslint": "~9.39.0",
+    "eslint-plugin-react": "~7.37.4",
+    "eslint-plugin-react-hooks": "~7.0.0",
+    "eslint-plugin-react-refresh": "~0.4.25",
+    "eslint-plugin-storybook": "~9.0.4",
+    "happy-dom": "~20.0.2",
+    "http-server": "~14.1.1",
+    "playwright": "~1.56.1",
+    "prop-types": "~15.8.1",
+    "sass": "~1.92.1",
+    "storybook": "~9.1.5",
+    "wait-on": "~9.0.3"
   },
   "eslintConfig": {
     "extends": [
