--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "url": "https://github.com/betagouv/mon-aide-cyber/issues"
   },
   "homepage": "https://github.com/betagouv/mon-aide-cyber#readme",
+  "packageManager": "pnpm@10.26.0",
   "workspaces": [
     "mon-aide-cyber-api",
     "mon-aide-cyber-ui"
   ],
   "scripts": {
+    "preinstall": "npx only-allow@1.2.2 pnpm",
     "test": "npm run test --workspaces",
     "test:watch": "npm run test:watch --workspaces",
     "build": "npm run build --workspaces",
@@ -24,14 +26,18 @@
     "format:corrige": "prettier --config=./.prettierrc.json -w mon-aide-cyber-api mon-aide-cyber-ui"
   },
   "dependencies": {
-    "typescript": "^5.1.3",
-    "vite": "^7.1.11"
+    "typescript": "~5.1.3",
+    "vite": "~7.1.11"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "@types/cookies": "^0.7.10",
-    "@vitest/ui": "^3.2.4",
-    "prettier": "^3.3.2",
-    "vitest": "^3.2.4"
+    "@faker-js/faker": "~10.0.0",
+    "@types/cookies": "~0.7.10",
+    "@vitest/ui": "~3.2.4",
+    "@eslint/js": "~9.39.2",
+    "@eslint/eslintrc": "~3.3.3",
+    "jiti": "~2.6.1",
+    "prettier": "~3.3.2",
+    "typescript-eslint": "~8.51.0",
+    "vitest": "~3.2.4"
   }
 }
