--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,30 @@ services:
     networks:
       - reseau-mon-aide-cyber
 
+  db-test:
+    container_name: mon-aide-cyber-bd-test
+    image: docker.io/postgres:14
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
+    ports:
+      - 5434:5432
+    volumes:
+      - /var/lib/postgresql/data
+      - ./mon-aide-cyber-api/test/docker-entrypoint-initdb.d/:/docker-entrypoint-initdb.d
+    depends_on:
+      - api
+
+  migration-test:
+    image: docker.io/node:24
+    environment:
+      - URL_SERVEUR_BASE_DONNEES=postgres://postgres@mon-aide-cyber-bd-test
+    build:
+      context: .
+      dockerfile: Dockerfile-api
+    command: 'pnpm -F mon-aide-cyber-api run test:migre-bdd'
+    depends_on:
+      - db-test
+
 networks:
   reseau-mon-aide-cyber:
     external: true
