--- a/mon-aide-cyber-api/package.json
+++ b/mon-aide-cyber-api/package.json
@@ -32,7 +32,8 @@
     "test": "tsc --noEmit && vitest run --config vitest.config.ts",
     "test:coverage": "vitest --config vitest.config.ts run --coverage",
     "test:coverage:ui": "vitest --config vitest.config.ts --ui --coverage --reporter verbose",
-    "test:watch": "vitest --config vitest.config.ts --ui --reporter verbose"
+    "test:watch": "vitest --config vitest.config.ts --ui --reporter verbose",
+    "test:migre-bdd": "knex migrate:latest --knexfile src/infrastructure/entrepots/postgres/knexfile.ts --migrations-directory migrations"
   },
   "dependencies": {
     "@lab-anssi/lib": "~1.3.1",
@@ -74,8 +75,6 @@
     "@types/pug": "~2.0.6",
     "@types/qs": "~6.14.0",
     "@types/yaml": "~1.9.7",
-    "@typescript-eslint/eslint-plugin": "~8.51.0",
-    "@typescript-eslint/parser": "~8.51.0",
     "@vitest/coverage-v8": "~3.2.4",
     "eslint": "~9.39.0",
     "light-my-request": "~5.11.0",
