--- a/mon-aide-cyber-ui/package.json
+++ b/mon-aide-cyber-ui/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "test": "tsc -p test/tsconfig.test.json && vitest run --config vitest.config.ts",
+    "test": "tsc --noEmit -p tsconfig.test.json && vitest run --config vitest.config.ts",
     "test:coverage": "vitest --config vitest.config.ts run --coverage",
     "test:watch": "vitest --config vitest.config.ts --ui --reporter verbose",
     "test:storybook": "test-storybook"
@@ -30,6 +30,7 @@
     "react-router-dom": "~6.14.0"
   },
   "devDependencies": {
+    "@eslint/compat": "~2.0.0",
     "@storybook/addon-links": "~9.0.4",
     "@storybook/react-vite": "~9.1.5",
     "@storybook/test-runner": "~0.22.0",
