--- a/mon-aide-cyber-ui/tsconfig.json
+++ b/mon-aide-cyber-ui/tsconfig.json
@@ -22,5 +22,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "vite.config.ts"],
+  "exclude": ["eslint.config.cjs"]
 }
