--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "typescript": "~5.1.3",
     "vite": "~7.1.11"
   },
+  "pnpm": {
+    "overrides": {
+      "semver": "~7.7.3"
+    }
+  },
   "devDependencies": {
     "@faker-js/faker": "~10.0.0",
     "@types/cookies": "~0.7.10",
