[SECURITE] Mets à jour la dépendance cros-spawn suite à l’alerte [dependabot](https://github.com/betagouv/mon-aide-cyber/security/dependabot/100)

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "pnpm": {
     "overrides": {
-      "semver": "~7.7.3"
+      "semver": "~7.7.3",
+      "cross-spawn": "~7.0.6"
     }
   },
   "devDependencies": {
