--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
       "semver": "~7.7.3",
       "cross-spawn": "~7.0.6",
       "axios": "~1.13.5",
+      "minimatch": "~10.2.1",
       "basic-ftp": "~5.2.0"
     }
   },
